<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <Button
        android:id="@+id/buttonPause"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        android:text="@string/pause"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSkip"
        android:layout_width="159dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/skip"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/buttonPause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonBack"
        app:layout_constraintTop_toBottomOf="@+id/buttonStop" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="159dp"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/back"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonPause"
        app:layout_constraintEnd_toStartOf="@id/buttonSkip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStop" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:text="@string/stop"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/instr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="64dp"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/message" />
    <!-- android:elevation sorgt dafür, dass Element immer sichtbar ist -->



</androidx.constraintlayout.widget.ConstraintLayout>