<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.workout.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_routine_detail"
            app:destination="@id/navigation_routine_detail" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_workout_detail"
            app:destination="@id/navigation_workout_detail" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_workout_detail_superset"
            app:destination="@id/navigation_workout_detail_superset" />
    </fragment>

    <fragment
        android:id="@+id/navigation_exercices"
        android:name="com.example.workout.ui.exercices.ExercicesFragment"
        android:label="@string/title_exercices"
        tools:layout="@layout/fragment_exercices" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.example.workout.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_routine_detail"
        android:name="com.example.workout.ui.home.RoutineDetailFragment"
        android:label="Routine xyz"
        tools:layout="@layout/fragment_routine_detail">
        <action
            android:id="@+id/action_navigation_routine_detail_to_navigation_routine_detail_add"
            app:destination="@id/navigation_routine_detail_add" />
    </fragment>

    <fragment
        android:id="@+id/navigation_routine_detail_add"
        android:name="com.example.workout.ui.home.RoutineDetailAddFragment"
        android:label="Workouts hinzufügen"
        tools:layout="@layout/fragment_routine_detail_add"/>


    <fragment
        android:id="@+id/navigation_workout_detail"
        android:name="com.example.workout.ui.home.WorkoutDetailFragment"
        android:label="Workout xyz"
        tools:layout="@layout/fragment_workout_detail">

        <!--
        <argument
            android:name="workout"
            app:argType="com.ersiver.gymific.model.Workout" --> />

        <action
            android:id="@+id/action_navigation_workout_detail_to_navigation_workout_detail_exercice"
            app:destination="@id/navigation_workout_detail_exercice" />
        <action
            android:id="@+id/action_navigation_workout_detail_to_navigation_workout_detail_add"
            app:destination="@id/navigation_workout_detail_add" />
    </fragment>

    <fragment
        android:id="@+id/navigation_workout_detail_superset"
        android:name="com.example.workout.ui.home.WorkoutDetailSupersetFragment"
        android:label="Supersatz-Workout xyz"
        tools:layout="@layout/fragment_workout_detail_superset">
        <action
            android:id="@+id/action_navigation_workout_detail_superset_to_navigation_routine_detail_superset_add"
            app:destination="@id/navigation_workout_detail_superset_add" />
        <action
            android:id="@+id/action_navigation_workout_detail_superset_to_navigation_workout_detail_exercice"
            app:destination="@id/navigation_workout_detail_exercice" />
    </fragment>


    <fragment
        android:id="@+id/navigation_workout_detail_superset_add"
        android:name="com.example.workout.ui.home.WorkoutDetailSupersetAddFragment"
        android:label="Übungen hinzufügen"
        tools:layout="@layout/fragment_workout_detail_superset_add">
    </fragment>

    <fragment
        android:id="@+id/navigation_workout_detail_exercice"
        android:name="com.example.workout.ui.home.WorkoutDetailExerciceFragment"
        android:label="Übung xyz"
        tools:layout="@layout/fragment_workout_detail_exercice">
        <!--
        <argument
            android:name="routine"
            app:argType="com.ersiver.gymific.model.Workout" />
            -->
    </fragment>

    <fragment
        android:id="@+id/navigation_workout_detail_add"
        android:name="com.example.workout.ui.home.WorkoutDetailAddFragment"
        android:label="Übungen hinzufügen"
        tools:layout="@layout/fragment_workout_detail_add">
        <!--
        <argument
            android:name="routine"
            app:argType="com.ersiver.gymific.model.Workout" />
            -->
    </fragment>
</navigation>